--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,10 @@
 @import './base.css';
 
+body {
+  background-color: var(--wxh5-common-bg-color);
+  color: var(--wxh5-common-color);
+}
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
